styles/globals.css
/* ... */
@media (max-width: 600px) {
  .circle {
    position: absolute;
    bottom: 0;
    right: -2px;
    top: -174px;
    height: 34vh;
    width: 47vw;
    background-image: url(/_next/static/media/Ellipse3.b015319f.png);
    background-repeat: no-repeat;
    background-size: 100% 100%;
  }

  .vertical-line {
    position: absolute;
    width: 3vw;
    height: 33vh;
    background-image: url(/_next/static/media/Rectangle2.96ea3249.png);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    right: 54px;
    top: -175px;
  }
  .horizontal-line {
    position: absolute;
    bottom: 22px;
    width: 53.4vw;
    height: 4vh;
    background-image: url(/_next/static/media/Rectangle1.c8859e7f.png);
    background-repeat: no-repeat;
    right: -26px;
  }

  .carousel .control-dots {
    position: absolute;
    top: 45rem;
    margin: 28px 0;
    padding: 0;
    text-align: center;
    width: 101%;
    z-index: 3;
  }

  .carousel .control-dots .dot {
    border: 5px solid orange;
    color: #f0b342;
    font-size: xx-large;
    width: 32px;
    height: 32px;
    transition: opacity 0.25s ease-in;
    opacity: 0.3;
    filter: alpha(opacity=30);
    background-color: #f0b342;

    border-radius: 50%;

    cursor: pointer;
    display: inline-block;
    margin: 32px 14px;
    box-shadow: var(--tw-ring-inset) 0 0 0
      calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
  }

  .header {
    display: none;
  }

  .LogoIMg {
    padding-top: 1.8rem;
    width: 15vw;
    height: 10vh;
    transform: translateY(-3vh);
  }

  .mobDropDown {
    display: block;
    display: flex;
    flex-direction: column;
    justify-content: center;
    z-index: 20;
    padding-top: 40px;
    align-items: flex-start;
    position: absolute;
    top: -38vh;
    animation: mobSilde 1s ease-out 0s forwards;
  }

  .laptopCarousel {
    display: none;
  }

  .mobCarousel {
    display: block;
  }

  .headTab {
    display: block;
  }

  .herotextTab {
    padding-left: 5vw;
    padding-right: 0px;
  }

  .herotextTabP1 {
    font-size: 1.9rem;
  }

  .herotextTabP2 {
    font-size: 1.1rem;
    margin-top: 8%;
  }

  .heroText {
    font-size: 5rem;
    margin-top: 10%;
  }

  .card {
    display: none;
  }

  .otherCard {
    display: block;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    width: 80vw;
  }

  .wrapCard {
    padding-left: 8vw;
  }

  .one {
    width: 70vw;
    height: 40vh;
  }

  .two {
    width: 70vw;
    height: 40vh;
  }

  .three {
    width: 70vw;
    height: 40vh;
  }

  .four {
    width: 70vw;
    height: 40vh;
  }

  .logo1 {
    width: 8vw;
    height: 44px;
    left: 4vw;
    top: 2vh;
  }

  .logo2 {
    width: 8vw;
    height: 22px;
    left: 10vw;
    top: 4.5vh;
  }

  .logo3 {
    width: 15vw;
    height: 44px;
    left: 4vw;
    top: 2vh;
  }

  .logoMainText {
    transform: translateX(-55vw);
    margin-top: 48px;
    font-size: 9px;
  }

  .logoMainText1 {
    transform: translateX(-56vw);
    font-size: 6px;
    letter-spacing: 1px;
  }

  .headerNew {
    height: 12vh;
    padding-left: 5px;
  }

  .screenDiv {
    background-color: white;
    /* transform: translateY(-2vh); */
  }

  .heroImgTwo {
    width: 100vw;
    height: 100vh;
    background-size: 130% 100%;
  }

  .heroImgThree {
    width: 100vw;
    height: 100vh;
    background-size: 130% 100%;
  }

  .heroImgFour {
    width: 100vw;
    height: 100vh;
    background-size: 130% 100%;
  }

  .heroImg {
    width: 100vw;
    height: 100vh;
    background-size: 130% 100%;
  }

  .heroTop {
    height: 100vh;
    width: 100vw;
  }

  .dots {
    top: 92vh;
    z-index: 10;
  }

  .Sliding {
    display: block;
    transform: translateX(-70vw);
    margin-top: 12px;
  }

  .newSliding {
    display: none;
  }
}
/* ... */

